# FinBuddy

./: .gitignore  .gitmodules  DEPLOYMENT.md  Dockerfile  GCP_DEPLOY.md  LINE_DEPLOYMENT.md  README.md  browser.py  libs.py  main.py  pyproject.toml  requirements.txt  streaming.py  summary.py  test_line_bot.py  trading.py
notebook/: logs.ipynb
notebook/.ipynb_checkpoints/: logs-checkpoint.ipynb
utils/: __init__.py  data.py  indicator.py  module.py  parser.py  tools.py  visualizer.py
utils/market/: __init__.py  data.py  engine.py
utils/trader/: __init__.py  action.py  engine.py  strategies.py
